Add dark mode documentation

--- a/packages/ignition/src/app/locales/en.json
+++ b/packages/ignition/src/app/locales/en.json
@@ -27,6 +27,7 @@
   "sizes": "Sizes",
   "combining": "Combining",
   "dark-mode": "Dark mode",
+  "light-mode": "Light mode",
   "states": "States",
   "show-all": "Show all icons",
   "icon": "icon",
