--- a/packages/ignition/src/app/locales/pt-br.json
+++ b/packages/ignition/src/app/locales/pt-br.json
@@ -27,6 +27,7 @@
   "sizes": "Tamanhos",
   "combining": "Combinando",
   "dark-mode": "Modo escuro",
+  "light-mode": "Modo claro",
   "states": "Estados",
   "show-all": "Todos os ícones",
   "icon": "ícone",
