--- a/packages/ignition/src/app/locales/docs/usage/dark-mode.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/dark-mode.en.mdx
@@ -6,11 +6,13 @@ order: 3
 activeSelector: group-has-[.docs-dark-mode]:active-content
 ---
 
+import RocketIconsText, {
+  RocketIconsTextDefault,
+} from "@/components/rocketicons-text";
+
+## Usage
 # How to Enable Dark Mode
 
-To enable dark mode in your application, follow these steps:
+Use <RocketIconsText /> to style icons on dark mode.
 
-1. Import the DarkModeToggle component from the DarkMode package.
-2. Use the DarkModeToggle component in your code to toggle between light and dark mode.
-
-Here's an example of how to enable dark mode:
+You can style icons differently when dark mode is enabled.
