--- a/packages/ignition/src/app/locales/docs/getting-started/components/customization.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/customization.pt-br.mdx
@@ -21,10 +21,11 @@ que estendem o componente padrão e adicionam seus estilos personalizados.
 Novamente, sempre usando as classes do **Tailwind** <SiTailwindcss className="-mt-1" />.
 
 ## Customização Global
+### Alterando o tema do <RocketIconsTextDefault />
 
 Você pode definir uma personalização global para todos os ícones de duas maneiras:
 
-### 1. Redefinindo o tema padrão
+#### 1. Redefinindo o tema padrão
 
 - Adicione um elemento components sob a seção theme do seu ***tailwind.config.js*** e um elemento ***icon*** 
 ob o elemento components.
@@ -90,7 +91,7 @@ O nosso tema padrão é assim:
 },
 ```
 
-### 2. Estendendo o tema padrão
+#### 2. Estendendo o tema padrão
 
 Se o tema padrão estiver bom e você só quiser ajustar algumas propriedades ou adicionar novas variantes 
 ou tamanhos, você pode simplesmente estender o tema padrão.
@@ -132,7 +133,7 @@ E você pode até criar um novo tamanho assim:
 Legal, né?
 
 E você pode fazer isso para:
-- efault
+- default
 - baseStyle
 - variants
 - sizes
