--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.pt-br.mdx
@@ -24,7 +24,7 @@ Este componente fornece uma coleção de ícones para uso em seus projetos <SiRe
 <RocketIconsTextDefault /> utiliza classes do **Tailwind CSS** para estilização,
 tornando fácil a personalização e integração em suas aplicações.
 
-## Por que foi criado?
+### Por que foi criado?
 
 <RocketIconsTextDefault /> foi criado para fornecer uma biblioteca de ícones
 simples e fácil de usar para desenvolvedores que desejam escrever um único
