--- a/packages/ignition/src/app/locales/docs/usage/colors.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/colors.pt-br.mdx
@@ -6,6 +6,7 @@ order: 6
 activeSelector: group-has-[.docs-cores]:active-content
 ---
 
+## Usando
 # Como Usar Cores
 
 Utilitários para controlar a cor dos ícones.
