--- a/packages/ignition/src/app/locales/docs/usage/sizing-elements.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/sizing-elements.en.mdx
@@ -6,6 +6,7 @@ order: 5
 activeSelector: group-has-[.docs-sizing-elements]:active-content
 ---
 
+## Usage
 # How to Size Elements
 
 Utilities for controlling the size of an icon.
