--- a/packages/ignition/src/app/locales/docs/usage/sizing-elements.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/sizing-elements.pt-br.mdx
@@ -6,6 +6,7 @@ order: 5
 activeSelector: group-has-[.docs-dimensionando-elementos]:active-content
 ---
 
+## Usando
 # Como Dimensionar Elementos
 
 Utilitários para controlar o tamanho dos ícones.
