--- a/packages/ignition/src/app/locales/docs/usage/colors.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/colors.en.mdx
@@ -6,6 +6,7 @@ order: 6
 activeSelector: group-has-[.docs-colors]:active-content
 ---
 
+## Usage
 # How to Use Colors
 
 Utilities for controlling the color of an icon.
