Add responsive design content

--- a/packages/ignition/src/app/locales/docs/usage/responsive-design.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/responsive-design.pt-br.mdx
@@ -6,12 +6,9 @@ order: 4
 activeSelector: group-has-[.docs-design-responsivo]:active-content
 ---
 
-# Como Implementar Design Responsivo
+## Usando
+# Design Responsivo
 
-Para implementar design responsivo em sua aplicação, siga estes passos:
+Todos os utilitários podem ser aplicados condicionalmente em diferentes breakpoints, criando interfaces completamente adaptivas.
 
-1. Use media queries para definir estilos diferentes para diferentes tamanhos de tela.
-2. Use unidades flexíveis como porcentagens ou unidades de viewport para dimensionar elementos.
-3. Use frameworks CSS como Bootstrap ou Tailwind CSS para simplificar a implementação de design responsivo.
-
-Aqui está um exemplo de como implementar design responsivo:
+Se você não está familiarizado com os breakpoints e variantes disponíveis no Tailwind, recomendamos dar uma checada na [documentação](https://tailwindcss.com/docs/responsive-design).
