--- a/packages/ignition/src/app/locales/docs/usage/responsive-design.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/responsive-design.en.mdx
@@ -6,12 +6,9 @@ order: 4
 activeSelector: group-has-[.docs-responsive-design]:active-content
 ---
 
-# How to Implement Responsive Design
+## Usage
+# Responsive Design
 
-To implement responsive design in your application, follow these steps:
+Every utility class can be applied conditionally at different breakpoints, building complex responsive interfaces.
 
-1. Use media queries to define different styles for different screen sizes.
-2. Use flexible units like percentages or viewport units for sizing elements.
-3. Use CSS frameworks like Bootstrap or Tailwind CSS to simplify responsive design implementation.
-
-Here's an example of how to implement responsive design:
+Take a look on the [Tailwind documentation](https://tailwindcss.com/docs/responsive-design) to learn more about available utilities and variants.
