--- a/packages/ignition/src/app/locales/docs/usage/state-management.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/state-management.en.mdx
@@ -6,14 +6,11 @@ order: 7
 activeSelector: group-has-[.docs-state-management]:active-content
 ---
 
-# How to Use Colors and States
+## Usage
+# Handling Hover, Focus and Other States
 
-To apply colors to elements in your application and handle different states like hover and focus, follow these steps:
+How style icons on hover, focus, and more.
 
-1. Define color values using CSS properties like `color`, `background-color`, `border-color`, etc.
-2. Use hexadecimal color codes (`#RRGGBB`), RGB values (`rgb(r, g, b)`), or CSS color names to specify colors.
-3. Use CSS frameworks like Bootstrap or Tailwind CSS to simplify color implementation.
-4. Utilize pseudo-classes like `:hover`, `:focus`, `:active`, etc., to define styles for different states.
-5. Apply the desired styles to the corresponding elements using CSS selectors.
-
-Here's an example of how to use colors and states:
+The modifiers can be applied conditionally by adding them to the beginning of the class name that describes the condition you want to target.
+<br />
+For example, to apply the `border-slate-600` on hover, use `hover:border-slate-600`:
