WIP: Add styling content

--- a/packages/ignition/src/app/locales/docs/usage/styling.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/styling.en.mdx
@@ -1,9 +1,13 @@
 ---
 title: Styling
-description: Styling description
+description: Use the Tailwind utilities to styling and changing the Icon appearance
 slug: styling
 order: 2
 activeSelector: group-has-[.docs-styling]:active-content
 ---
 
-    # This is how you style a <span className="font-light">rocket</span><span className="font-semibold">icon</span>
+## Usage
+# Styling and changing the Icon Appearance 
+
+Using the Tailwind utilities to style and changing the Icon appearance.
+
