--- a/packages/ignition/src/app/locales/docs/usage/styling.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/styling.pt-br.mdx
@@ -1,9 +1,12 @@
 ---
 title: Estilização
-description: Descrição da estilização
+description: Use os utilitários do Tailwind na estilização da aparência do ícone
 slug: estilizando
 order: 2
 activeSelector: group-has-[.docs-estilizando]:active-content
 ---
 
-    # Assim você estiliza um <span className="font-light">rocket</span><span className="font-semibold">icon</span>
+## Usando
+# Estilizando os ícones
+
+Usando os utilitários do Tailwind para estilizar a aparência do ícone.
