Add styling text for docs

--- a/packages/ignition/src/app/locales/docs/usage/styling.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/styling.en.mdx
@@ -6,8 +6,14 @@ order: 2
 activeSelector: group-has-[.docs-styling]:active-content
 ---
 
+import RocketIconsText, {
+  RocketIconsTextDefault,
+} from "@/components/rocketicons-text";
+
 ## Usage
 # Styling and changing the Icon Appearance 
 
-Using the Tailwind utilities to style and changing the Icon appearance.
+Here are some possibilities and tips for customizing icons. But there are so many options that they wouldn't all fit here.
+
+_If it's available in Tailwind, you can try it with <RocketIconsText />_
 
