--- a/packages/ignition/src/app/locales/docs/usage/styling.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/styling.pt-br.mdx
@@ -6,7 +6,13 @@ order: 2
 activeSelector: group-has-[.docs-estilizando]:active-content
 ---
 
+import RocketIconsText, {
+  RocketIconsTextDefault,
+} from "@/components/rocketicons-text";
+
 ## Usando
 # Estilizando os ícones
 
-Usando os utilitários do Tailwind para estilizar a aparência do ícone.
+Aqui você vai encontrar algumas possíbilidades e dicas para customizar os ícones. Mas existem tantas opções que não caberiam todas aqui.
+
+_Se existe no Tailwind, você pode tentar com <RocketIconsText />_
