Fix state management text

--- a/packages/ignition/src/app/locales/docs/usage/state-management.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/state-management.pt-br.mdx
@@ -3,15 +3,16 @@ title: Hover, Focus e Outros Estados
 description: Implementando cores e estados em sua aplicação
 slug: estados
 order: 7
-activeSelector: group-has-[.docs-state-management]:active-content
+activeSelector: group-has-[.docs-estados]:active-content
 ---
 
 ## Usando
 # Usando Hover, Focus e outros Estados
 
 Como estilizar os ícones em hover, focus e muito mais
-
-Você pode usar modificadores antes dos utilitários para condicionalmente aplicar um estilo diferente para condições desejadas.
 <br />
+**O suporte a estados no React Native não é completo**. _Veja a documentação oficial do [NativeWind](https://www.nativewind.dev/core-concepts/states) para saber mais._
+<br />
+Você pode usar modificadores antes dos utilitários para condicionalmente aplicar um estilo diferente para condições desejadas.  
 Por examplo, para aplicar `border-slate-600` no ícone durante o hover, use `hover:border-slate-600`:
 
