--- a/packages/ignition/src/app/locales/docs/usage/usage.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/usage.pt-br.mdx
@@ -1,21 +1,32 @@
 ---
-title: Usando o RocketIcons
-description: Documentation for RocketIcons
+title: Usando o Rocketicons
+description: Usando Rocketicons e onde ele pode te ajudar
 slug: usando
 order: 0
 activeSelector: group-has-[.docs-usando]:active-content
 ---
 
-# Como usar
+import RocketIconsText, {
+  RocketIconsTextDefault,
+} from "@/components/rocketicons-text";
 
-Primeiro, você precisa importar o componente:
+## Usando
+# Usando o Rocketicons
+A biblioteca de ícones para React e React Native, com o poder do Tailwind
 
-```tsx
-import { RcRocketIcon } from "rocketicons/rc";
-```
+O <RocketIconsText /> é uma biblioteca de ícones como parte de uma solução que possibilita códigos escritos em React
+rodem tanto na Web quanto no Mobile, sem alterações, economizando recursos e tempo de desenvolvimento, possibilitando que
+o foco seja direcionado ao que importa. A sua aplicação!
+<br />
+Como desenvolvedores fãs do Tailwind, foi uma processo natural usar esse poderoso framework para entregar ao ícones um grande
+poder de personalização e customização.
 
-Então, você pode usar o componente assim:
+> Lembro de ter ficado maravilhado quando entendi o funcionando do Tailwind e apesar de não ter nenhuma ligação com a empresa
+> esse trabalho é um tributo a contribuição que eles trouxeram para nós devs.
+> É uma forma de dizer, muito obrigado!
 
-```tsx
-<RocketIconsText />
-```
+Foi divertido ver tudo o que conseguimos fazer com os ícones integrados com o Tailwind e esperamos que vocês gostem tanto quanto nós.
+<br />
+Se ainda não tem o pacote instalado, os [Primeiros Passos](./primeiros-passos) podem ser um bom caminho para começar.
+Caso já tenha tudo pronto, vamos começar a [adicionar ícones](./adicionando-icones).
+
