fix: docs review

--- a/packages/ignition/src/app/locales/docs/usage/adding.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/adding.en.mdx
@@ -14,7 +14,7 @@ import RocketIconsText, {
 # Adding Icons
 Adding and using icons from <RocketIconsText /> on your application.
 
-_If your are new here or even doesn't have the <RocketIconsText /> installed, you might take a took on [Getting started](./getting-started) before starting._
+_If your are new here or just don't have <RocketIconsText /> installed, you might take a took at [Getting started](./getting-started) before starting._
 <br />
 Using the [icons library](../icons), find the icon you need.  
 An icon is nothing more than a React component, so knowing the name of the component and the sub-package where it is located, you just need to import it.
