--- a/packages/ignition/src/app/locales/docs/usage/adding.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/adding.pt-br.mdx
@@ -16,7 +16,7 @@ Adicionando e usando ícones do <RocketIconsText /> em sua aplicação.
 
 _Se você é novo aqui ou ainda não tem o <RocketIconsText /> instalado, talvez você queira dar uma olhada nos [Primeiros Passos](./primeiros-passos) antes de começar._
 <br />
-Usando nossa biblioteca de [ícones](../icons), encontre o ícone que você precisa.   
+Usando nossa [biblioteca de ícones](../icons), encontre o ícone que você precisa.   
 Um ícone nada mais é do que um componente React, então sabendo o nome do componente e do sub pacote onde ele se encontra, você só precisa importá-lo.
 <br />
 Vamos usar como exemplo o componente `RcRocketIcon` que se encontra no sub pacote chamado `rc`.  
