--- a/packages/ignition/src/app/locales/docs/usage/components/adding-including.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/adding-including.en.mdx
@@ -7,5 +7,5 @@ order: 5
 activeSelector: group-has-[.docs-adding]:active-content
 ---
 
-Once you get the component imported, you just need to add it anywhere in the code where it is necessary
+Once you get the component imported, you just need to add it anywhere in the code where it is necessary.
 <br />
