--- a/packages/ignition/src/app/locales/docs/usage/components/colors-defaults.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/colors-defaults.en.mdx
@@ -10,5 +10,5 @@ activeSelector: group-has-[.docs-colors]:active-content
 ### Default color palette
 
 Icons are available in all of Tailwind's default color palette and shares the colors configuration.  
-Follow [the official color customization documation](https://tailwindcss.com/docs/customizing-colors)
+Follow [the official color customization documentation](https://tailwindcss.com/docs/customizing-colors)
 to add your customized palette.
