--- a/packages/ignition/src/app/locales/docs/usage/components/dark-mode-action.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/dark-mode-action.pt-br.mdx
@@ -10,6 +10,6 @@ activeSelector: group-has-[.docs-dark-mode]:active-content
 ## Em ação
 ### Uso da variante dark
 
-Use a variante `dark:` para definir estilos no mode escuro.
+Use a variante `dark:` para definir estilos no modo escuro.
 
-> Mude o tema da página e veja o que acontece
+> Mude o tema da página e veja o que acontece.
