--- a/packages/ignition/src/app/locales/docs/usage/components/styling-animate.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-animate.en.mdx
@@ -7,8 +7,8 @@ order: 5
 activeSelector: group-has-[.docs-styling]:active-content
 ---
 
-### Default color palette
+#### [Animations](https://tailwindcss.com/docs/animation)
+Animations and transitions can be used with icons,
+but this functionality is only available for React.
 
-Icons are available in all of Tailwind's default color palette and shares the colors configuration.  
-Follow [the official color customization documation](https://tailwindcss.com/docs/customizing-colors)
-to add your customized palette.
+**React Native has some limited features**. _See the official documentation of [NativeWind](https://www.nativewind.dev/core-concepts/states) for more information._
