--- a/packages/ignition/src/app/locales/docs/usage/components/styling-bg.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-bg.en.mdx
@@ -9,4 +9,4 @@ activeSelector: group-has-[.docs-styling]:active-content
 
 ### Defining background
 
-Use the [Tailwind utilities](https://tailwindcss.com/docs/background-attachment) defining the icons background.
+Use the [Tailwind utilities](https://tailwindcss.com/docs/background-attachment) to set the icons background.
