--- a/packages/ignition/src/app/locales/docs/usage/components/styling-border-s.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-border-s.en.mdx
@@ -9,4 +9,4 @@ activeSelector: group-has-[.docs-styling]:active-content
 
 ## Borders
 #### [Border Style](https://tailwindcss.com/docs/border-style)
-You can define the border style
+You can define the border style.
