--- a/packages/ignition/src/app/locales/docs/usage/components/styling-border.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-border.en.mdx
@@ -15,4 +15,4 @@ import RocketIconsText, {
 Every border utility should work with no problems on <RocketIconsText />.
 <br />
 #### [Border Radius](https://tailwindcss.com/docs/border-radius)
-You can define the border radius
+You can define the border radius.
