--- a/packages/ignition/src/app/locales/docs/usage/components/styling-cursor.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-cursor.pt-br.mdx
@@ -8,5 +8,5 @@ activeSelector: group-has-[.docs-styling]:active-content
 ---
 
 #### [Cursor](https://tailwindcss.com/docs/cursor)
-Definindo cursores nos ícones
+Definindo cursores nos ícones.
 
