--- a/packages/ignition/src/app/locales/docs/usage/components/styling-filters.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-filters.en.mdx
@@ -8,6 +8,6 @@ activeSelector: group-has-[.docs-styling]:active-content
 ---
 
 #### [Filters](https://tailwindcss.com/docs/blur)
-Filters and icons
+Filters and icons.
 
-*NativeWind doesn't support filters,  tros logo essa funcionalidade não está disponível para React Native*
+*NativeWind doesn't support filters, therefore this functionality isn't available for React Native."*
