--- a/packages/ignition/src/app/locales/docs/usage/components/styling-filters.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-filters.pt-br.mdx
@@ -8,6 +8,6 @@ activeSelector: group-has-[.docs-styling]:active-content
 ---
 
 #### [Filtros](https://tailwindcss.com/docs/blur)
-Filtros e ícones
+Filtros e ícones.
 
-*NativeWind doesn't support filters, therefore this functionality isn't available for React Native."*
+*NativeWind doesn't support filters, logo essa funcionalidade não está disponível para React Native*
