--- a/packages/ignition/src/app/locales/docs/usage/components/styling-transform.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-transform.en.mdx
@@ -8,7 +8,7 @@ activeSelector: group-has-[.docs-styling]:active-content
 ---
 
 #### [Transforms](https://tailwindcss.com/docs/scale)
-Using tranforms
+Using tranforms.
 
 _Learn more about compatibility on the [NativeWind](https://www.nativewind.dev/core-concepts/states) official documentation._
 
