--- a/packages/ignition/src/app/locales/docs/usage/dark-mode.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/dark-mode.en.mdx
@@ -13,6 +13,6 @@ import RocketIconsText, {
 ## Usage
 # How to Enable Dark Mode
 
-Use <RocketIconsText /> to style icons on dark mode.
+Using <RocketIconsText /> to style icons on dark mode.
 
 You can style icons differently when dark mode is enabled.
