--- a/packages/ignition/src/app/locales/docs/usage/responsive-design.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/responsive-design.pt-br.mdx
@@ -11,4 +11,4 @@ activeSelector: group-has-[.docs-design-responsivo]:active-content
 
 Todos os utilitários podem ser aplicados condicionalmente em diferentes breakpoints, criando interfaces completamente adaptivas.
 
-Se você não está familiarizado com os breakpoints e variantes disponíveis no Tailwind, recomendamos dar uma checada na [documentação](https://tailwindcss.com/docs/responsive-design).
+Se você não está familiarizado com os breakpoints e variantes disponíveis no Tailwind, recomendamos dar uma checada na [documentação oficial](https://tailwindcss.com/docs/responsive-design).
