--- a/packages/ignition/src/app/locales/docs/usage/state-management.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/state-management.en.mdx
@@ -11,7 +11,7 @@ activeSelector: group-has-[.docs-state-management]:active-content
 
 How style icons on hover, focus, and more.
 <br />
-**The state support on React Native is not complete**. _Learn more at [NativeWind](https://www.nativewind.dev/core-concepts/states) documentation._
+**The state support on React Native is not complete**. _Learn more at the [NativeWind](https://www.nativewind.dev/core-concepts/states) documentation._
 <br />
-The modifiers can be applied conditionally by adding them to the beginning of the class name that describes the condition you want to target.   
+The modifiers can be applied conditionally by adding them to the beginning of the class name that describes the condition you want to target.  
 For example, to apply the `border-slate-600` on hover, use `hover:border-slate-600`:
