--- a/packages/ignition/src/app/locales/docs/usage/usage.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/usage.pt-br.mdx
@@ -18,15 +18,16 @@ O <RocketIconsText /> é uma biblioteca de ícones como parte de uma solução q
 rodem tanto na Web quanto no Mobile, sem alterações, economizando recursos e tempo de desenvolvimento, possibilitando que
 o foco seja direcionado ao que importa. A sua aplicação!
 <br />
-Como desenvolvedores fãs do Tailwind, foi uma processo natural usar esse poderoso framework para entregar ao ícones um grande
+Como desenvolvedores fãs do Tailwind, foi um processo natural usar esse poderoso framework para dar aos ícones um grande
 poder de personalização e customização.
 
-> Lembro de ter ficado maravilhado quando entendi o funcionando do Tailwind e apesar de não ter nenhuma ligação com a empresa
+> Lembro de ter ficado maravilhado quando entendemos o funcionando do Tailwind e apesar de não ter nenhuma ligação com a empresa
 > esse trabalho é um tributo a contribuição que eles trouxeram para nós devs.
 > É uma forma de dizer, muito obrigado!
 
 Foi divertido ver tudo o que conseguimos fazer com os ícones integrados com o Tailwind e esperamos que vocês gostem tanto quanto nós.
 <br />
 Se ainda não tem o pacote instalado, os [Primeiros Passos](./primeiros-passos) podem ser um bom caminho para começar.
+
 Caso já tenha tudo pronto, vamos começar a [adicionar ícones](./adicionando-icones).
 
