--- a/packages/ignition/src/app/locales/docs/usage/components/adding-next.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/adding-next.en.mdx
@@ -11,11 +11,11 @@ import RocketIconsText, {
   RocketIconsTextDefault,
 } from "@/components/rocketicons-text";
 
-That is all you need adding an icon to your project.
+That is all you need to add an icon to your project.
 <br />
 Now that you already have the icon, you will most likely want to style it because,
-after the possibility that the <RocketIconsTextDefault /> brings in sharing code between
-Web and Mobile applications, the ease of adapting the appearance and behavior of the icon to
+after the possibility that <RocketIconsTextDefault /> brings in sharing code between
+Web and Mobile applications, the ease of customizing the appearance and behavior of the icon to
 your project is the most powerful functionality of this tool.
 <br />
 You can find a few links to help you out on this task below:
