--- a/packages/ignition/src/app/locales/docs/usage/components/adding-next.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/adding-next.pt-br.mdx
@@ -14,7 +14,7 @@ import RocketIconsText, {
 Isso é tudo que você precisa para adicionar um ícone no seu projeto.
 <br />
 Agora que você já tem o ícone, muito provalvemente você vai querer estilizá-lo, porque, depois da possibilidade que
-o <RocketIconsTextDefault /> traz entre compartilhar código entre aplicações Web e Mobile, a facilidade de adequar
+o <RocketIconsTextDefault /> traz entre compartilhar código entre aplicações Web e Mobile, a facilidade de personalizar
 a aparência e o comportamento do ícone ao seu projeto, é a funcionalidade mais poderosa dessa ferramenta.
 <br />
 Então seguem alguns links que podem te ajudar nessa tarefa:
