--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-sizes.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-sizes.pt-br.mdx
@@ -10,4 +10,4 @@ activeSelector: group-has-[.docs-sizing-elements]:active-content
 ## Usando utilitários do Tailwind
 ### Usando sizes
 
-Utilize os utilitários `size-*` para definir o tamanho de um ícone. Abaixo você encontrará alguns exemplos de como utilizá-los, mas para uma lista completa das opções disponíveis, veja a documentação oficial [tamanhos](https://tailwindcss.com/docs/size) do Tailwind.
+Utilize os utilitários `size-*` para definir o tamanho de um ícone. Abaixo você encontrará alguns exemplos de como utilizá-los, mas para uma lista completa das opções disponíveis, veja a documentação oficial sobre [tamanhos](https://tailwindcss.com/docs/size) do Tailwind.
