--- a/packages/ignition/src/app/locales/docs/usage/components/styling-border-s.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-border-s.pt-br.mdx
@@ -9,4 +9,4 @@ activeSelector: group-has-[.docs-styling]:active-content
 
 ## Bordas
 #### [Estilo da borda](https://tailwindcss.com/docs/border-style)
-Definindo estilo das bordas
+Definindo estilo das bordas.
