--- a/packages/ignition/src/app/locales/docs/usage/components/styling-border-w.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-border-w.en.mdx
@@ -9,4 +9,4 @@ activeSelector: group-has-[.docs-styling]:active-content
 
 ## Border
 #### [Border width](https://tailwindcss.com/docs/border-width)
-You can define the border width
+You can define the border width.
