--- a/packages/ignition/src/app/locales/docs/usage/components/styling-cursor.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-cursor.en.mdx
@@ -8,4 +8,4 @@ activeSelector: group-has-[.docs-styling]:active-content
 ---
 
 #### [Cursor](https://tailwindcss.com/docs/cursor)
-Use cursor on icons
+Use cursor on icons.
