--- a/packages/ignition/src/app/locales/docs/usage/components/styling-effects.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-effects.pt-br.mdx
@@ -9,4 +9,4 @@ activeSelector: group-has-[.docs-styling]:active-content
 
 #### [Efeitos](https://tailwindcss.com/docs/box-shadow)
 Efeitos como [sombras](https://tailwindcss.com/docs/box-shadow), [opacidade](https://tailwindcss.com/docs/opacity)
-e [mistura](https://tailwindcss.com/docs/mix-blend-mode) podem ser usados com ícones
+e [mistura](https://tailwindcss.com/docs/mix-blend-mode) podem ser usados com ícones.
