Add quote component on usage en

--- a/packages/ignition/src/app/locales/docs/usage/usage.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/usage.en.mdx
@@ -10,6 +10,8 @@ import RocketIconsText, {
   RocketIconsTextDefault,
 } from "@/components/rocketicons-text";
 
+import Quote from "@/components/documentation/quote";
+
 ## Usage
 # Using Rocketicons
 The icon library for React and React Native, empowered by Tailwind
@@ -21,9 +23,11 @@ allowing the focus to be directed towards what matters. Your application!
 As developers who are fans of Tailwind, it was a natural process to leverage this powerful framework to give
 icons a significant level of personalization and customization.
 
-> I remember being amazed when I understood how Tailwind works, and although I have no affiliation with the
-> company, this work is a tribute to the contribution they've brought to us devs.
-> It's a way of saying, thank you very much!"
+<Quote>
+I remember being amazed when I understood how Tailwind works, and although I have no affiliation with the
+company, this work is a tribute to the contribution they've brought to us devs.
+It's a way of saying, thank you very much!"
+</Quote>
 
 It was fun to see all that we could accomplish with icons integrated with Tailwind, and we hope you enjoy it as much as we do.
 <br />
