--- a/packages/ignition/src/app/locales/docs/usage/components/styling-filters.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-filters.pt-br.mdx
@@ -10,4 +10,4 @@ activeSelector: group-has-[.docs-styling]:active-content
 #### [Filtros](https://tailwindcss.com/docs/blur)
 Filtros e ícones.
 
-*NativeWind doesn't support filters, logo essa funcionalidade não está disponível para React Native*
+*NativeWind não suporta filtros, logo essa funcionalidade não está disponível para React Native*
