code review updates

--- a/packages/ignition/src/app/locales/docs/usage/components/responsive-design-explanation.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/responsive-design-explanation.en.mdx
@@ -7,6 +7,6 @@ order: 6
 activeSelector: group-has-[.docs-responsive-design]:active-content
 ---
 
-The example above works using the Tailwind breakpoints, including an arbitrary one, customizing the design for different screen sizes.
+The example above works using the Tailwind breakpoints, including an arbitrary one using `md-[arbitrary-value]`, customizing the design for different screen sizes.
 
 We’ve only used few breakpoint in this example, but you could easily customize this component at other sizes using the `lg`, `xl`, or `2xl` responsive prefixes as well.
