--- a/packages/ignition/src/app/locales/docs/usage/components/responsive-design-explanation.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/responsive-design-explanation.pt-br.mdx
@@ -7,6 +7,6 @@ order: 6
 activeSelector: group-has-[.docs-responsive-design]:active-content
 ---
 
-O exemplo acima funciona usando breakpoints do Tailwind, mesmo que seja arbitrário, customizando o desing para diferentes tamanhos de telas.
+O exemplo inclui breakpoints que são padrões no Tailwind e um exemplo configurado arbitrariamente usando `md-[valor-arbitrario]`, customizando o desing para diferentes tamanhos de telas.
 
 Só usamos alguns breakpoints nesse examplo, mas você pode facilmente customizar esse componente para outros tamanhos usando prefixos como `lg`, `xl`, or `2xl`.
