--- a/packages/ignition/src/app/locales/docs/usage/usage.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/usage.pt-br.mdx
@@ -21,7 +21,7 @@ o foco seja direcionado ao que importa. A sua aplicação!
 Como desenvolvedores fãs do Tailwind, foi um processo natural usar esse poderoso framework para dar aos ícones um grande
 poder de personalização e customização.
 
-> Lembro de ter ficado maravilhado quando entendemos o funcionando do Tailwind e apesar de não ter nenhuma ligação com a empresa
+> Lembro de ter ficado maravilhado quando entendi o funcionando do Tailwind e apesar de não ter nenhuma ligação com a empresa
 > esse trabalho é um tributo a contribuição que eles trouxeram para nós devs.
 > É uma forma de dizer, muito obrigado!
 
