fix: improving mdx texts to fit opengraph images

--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.en.mdx
@@ -1,6 +1,6 @@
 ---
 title: Getting Started
-description: Documentation for RocketIcons
+description: Start using rocketicons right away! It is super easy!
 slug: getting-started
 order: 0
 activeSelector: group-has-[.docs-getting-started]:active-content
