--- a/packages/ignition/src/app/locales/docs/usage/sizing-elements.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/sizing-elements.pt-br.mdx
@@ -1,5 +1,5 @@
 ---
-title: Dimensionando Elementos
+title: Dimensionando Ícones
 description: Definindo o tamanho de um ícone
 slug: dimensionando-elementos
 order: 5
