--- a/packages/ignition/src/app/locales/docs/usage/usage.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/usage.en.mdx
@@ -1,6 +1,6 @@
 ---
-title: Using RocketIcons
-description: Using RocketIcons
+title: Using The Icons
+description: You will be amazed with the power of Rocketicons and all the possibilites that Tailwind brings to your icons.
 slug: usage
 order: 0
 activeSelector: group-has-[.docs-usage]:active-content
