--- a/packages/ignition/src/app/locales/docs/usage/usage.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/usage.pt-br.mdx
@@ -1,6 +1,6 @@
 ---
-title: Usando o Rocketicons
-description: Usando Rocketicons e onde ele pode te ajudar
+title: Usando os ícones
+description: Você ficará maravilhado com o poder do Rocketicons e todas as possibilidades que o Tailwind traz para seus ícones.
 slug: usando
 order: 0
 activeSelector: group-has-[.docs-usando]:active-content
