--- a/packages/ignition/src/app/locales/docs/getting-started/getting-started.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/getting-started.pt-br.mdx
@@ -1,6 +1,6 @@
 ---
 title: Primeiros Passos
-description: Documentação para RocketIcons
+description: Começe já a usar rocketicons. É super fácil!
 slug: primeiros-passos
 order: 0
 activeSelector: group-has-[.docs-primeiros-passos]:active-content
