--- a/packages/ignition/src/app/locales/docs/usage/styling.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/styling.en.mdx
@@ -1,6 +1,6 @@
 ---
 title: Styling
-description: Use the Tailwind utilities to styling and changing the Icon appearance
+description: Use the Tailwind utilities for styling and to change the Icon appearance
 slug: styling
 order: 2
 activeSelector: group-has-[.docs-styling]:active-content
