sizing elements -> sizing icons

--- a/packages/ignition/src/app/locales/docs/usage/components/adding-next.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/adding-next.en.mdx
@@ -23,7 +23,7 @@ You can find a few links to help you out on this task below:
 [Colors](./colors)  
 [Dark mode](./dark-mode)  
 [Responsive Design](./responsive-design)  
-[Sizing elements](./sizing-elements)  
+[Sizing icons](./sizing-icons)  
 [Hover, Focus e Other States](./state-management)  
 [Styling](./styling)
 
