--- a/packages/ignition/src/app/locales/docs/usage/components/adding-next.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/adding-next.pt-br.mdx
@@ -22,6 +22,6 @@ Então seguem alguns links que podem te ajudar nessa tarefa:
 [Cores](./cores)  
 [Modo Escuro](./modo-escuro)  
 [Design Responsivo](./design-responsivo)  
-[Dimensionando Ícones](./dimensionando-elementos)  
+[Dimensionando Ícones](./dimensionando-icones)  
 [Hover, Focus e Outros Estados](./estados)  
 [Estilização](./estilizando)
