--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-utilities.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-utilities.pt-br.mdx
@@ -1,10 +1,10 @@
 ---
 title: Sizing Elements
-description: Implementing sizing for elements in your application
+description: Implementing sizing for icons in your application
 slug: sizing-utilities
-group: sizing-elements
+group: sizing-icons
 order: 5
-activeSelector: group-has-[.docs-sizing-elements]:active-content
+activeSelector: group-has-[.docs-sizing-icons]:active-content
 ---
 
 # Uso básico
