--- a/packages/ignition/src/app/locales/docs/usage/sizing-icons.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/sizing-icons.en.mdx
@@ -1,9 +1,9 @@
 ---
 title: Sizing Elements
 description: Defining the size of an icon
-slug: sizing-elements
+slug: sizing-icons
 order: 5
-activeSelector: group-has-[.docs-sizing-elements]:active-content
+activeSelector: group-has-[.docs-sizing-icons]:active-content
 ---
 
 ## Usage
