--- a/packages/ignition/src/app/locales/docs/usage/sizing-icons.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/sizing-icons.pt-br.mdx
@@ -1,12 +1,12 @@
 ---
 title: Dimensionando Ícones
 description: Definindo o tamanho de um ícone
-slug: dimensionando-elementos
+slug: dimensionando-icones
 order: 5
-activeSelector: group-has-[.docs-dimensionando-elementos]:active-content
+activeSelector: group-has-[.docs-dimensionando-icones]:active-content
 ---
 
 ## Usando
-# Como Dimensionar Elementos
+# Como Dimensionar Ícones
 
 Utilitários para controlar o tamanho dos ícones.
