Rename adding to adding icons page

--- a/packages/ignition/src/app/locales/docs/usage/components/adding-icons-including.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/adding-icons-including.en.mdx
@@ -2,7 +2,7 @@
 title: Adding
 description: Adding
 slug: adding-including
-group: adding
+group: adding-icons
 order: 5
 activeSelector: group-has-[.docs-adding]:active-content
 ---
