Fix adding icons content

--- a/packages/ignition/src/app/locales/docs/usage/components/adding-icons-including.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/adding-icons-including.en.mdx
@@ -1,7 +1,7 @@
 ---
 title: Adding
 description: Adding
-slug: adding-including
+slug: adding-icons-including
 group: adding-icons
 order: 5
 activeSelector: group-has-[.docs-adding]:active-content
