--- a/packages/ignition/src/app/locales/docs/usage/components/adding-icons-next.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/adding-icons-next.pt-br.mdx
@@ -1,7 +1,7 @@
 ---
 title: Adding
 description: Adding
-slug: adding-next
+slug: adding-icons-next
 group: adding-icons
 order: 5
 activeSelector: group-has-[.docs-adding]:active-content
