fixing search issues

--- a/packages/ignition/src/app/locales/components/home/home.en.mdx
+++ b/packages/ignition/src/app/locales/components/home/home.en.mdx
@@ -1,5 +1,5 @@
 ---
-title: React and React Native icones powered by Tailwind
+title: React and React Native icons powered by Tailwind
 description: The icon library for your React or React Native project, customized using the Tailwind classes you already know
 slug: home
 ---
