--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-sizes.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-sizes.en.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sizing Elements
+title: Tailwind Sizing Utilities
 description: Implementing sizing for icons in your application
 slug: sizing-tw-sizes
 group: sizing-icons
