--- a/packages/ignition/src/app/locales/docs/usage/components/styling-animate.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-animate.en.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Animations
+description: Using animations with icons
 slug: styling-animate
 group: styling
 order: 5
