--- a/packages/ignition/src/app/locales/docs/usage/components/styling-border-s.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-border-s.pt-br.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Estilo da borda
+description: Estilizando a borda
 slug: styling-border-s
 group: styling
 order: 5
