--- a/packages/ignition/src/app/locales/docs/usage/components/styling-border-w.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-border-w.en.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Border Width
+description: Styling the border width
 slug: styling-border-w
 group: styling
 order: 5
