--- a/packages/ignition/src/app/locales/docs/usage/components/styling-border-w.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-border-w.pt-br.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Largura da borda
+description: Estilizando a largura da borda
 slug: styling-border-w
 group: styling
 order: 5
