--- a/packages/ignition/src/app/locales/docs/usage/components/styling-cursor.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-cursor.pt-br.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Cursor
+description: Definindo cursores nos ícones
 slug: styling-cursor
 group: styling
 order: 5
