--- a/packages/ignition/src/app/locales/docs/usage/components/styling-effects.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-effects.en.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Effects
+description: Setting effects on the icons
 slug: styling-effects
 group: styling
 order: 5
