--- a/packages/ignition/src/app/locales/docs/usage/components/styling-effects.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-effects.pt-br.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Efeitos
+description: Definindo efeitos nos ícones
 slug: styling-effects
 group: styling
 order: 5
