--- a/packages/ignition/src/app/locales/docs/usage/components/styling-filters.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-filters.en.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Filters
+description: Aplying filters to icons
 slug: styling-filters
 group: styling
 order: 5
