--- a/packages/ignition/src/app/locales/docs/usage/components/styling-filters.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-filters.pt-br.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Fultros
+description: Aplicando filtros em ícones
 slug: styling-filters
 group: styling
 order: 5
