--- a/packages/ignition/src/app/locales/docs/usage/components/styling-outline.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-outline.en.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Outline
+description: Styling the outline
 slug: styling-outline
 group: styling
 order: 5
