--- a/packages/ignition/src/app/locales/docs/usage/components/styling-transform.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-transform.en.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Transforms
+description: 
 slug: styling-transform
 group: styling
 order: 5
