--- a/packages/ignition/src/app/locales/docs/usage/components/styling-transform.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-transform.pt-br.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Transformações
+description: Usando transformações
 slug: styling-transform
 group: styling
 order: 5
