--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-customizing.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-customizing.en.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sizing Elements
+title: Custom Sizing
 description: Implementing sizing for icons in your application
 slug: sizing-customizing
 group: sizing-icons
