--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-customizing.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-customizing.pt-br.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sizing Elements
+title: Tamanho Personalizado
 description: Implementing sizing for icons in your application
 slug: sizing-customizing
 group: sizing-icons
