--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-hw.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-hw.en.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sizing Elements
+title: Height and Width
 description: Implementing sizing for icons in your application
 slug: sizing-tw-hw
 group: sizing-icons
