--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-hw.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-hw.pt-br.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sizing Elements
+title: Altura e Largura
 description: Implementing sizing for icons in your application
 slug: sizing-tw-hw
 group: sizing-icons
