--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-utilities.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-utilities.en.mdx
@@ -1,5 +1,5 @@
 ---
-title: Sizing Elements
+title: Basic Sizing
 description: Implementing sizing for icons in your application
 slug: sizing-utilities
 group: sizing-icons
