--- a/packages/ignition/src/app/locales/docs/usage/components/styling-animate.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-animate.pt-br.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Animações
+description: Animações nos ícones
 slug: styling-animate
 group: styling
 order: 5
