--- a/packages/ignition/src/app/locales/docs/usage/components/styling-border.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-border.en.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Border
+description: Styling the border
 slug: styling-border
 group: styling
 order: 5
