--- a/packages/ignition/src/app/locales/docs/usage/components/styling-border.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-border.pt-br.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Borda
+description: Estilizando a borda
 slug: styling-border
 group: styling
 order: 5
