--- a/packages/ignition/src/app/locales/docs/usage/components/styling-cursor.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-cursor.en.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Cursor
+description: Setting the cursor over the icons
 slug: styling-cursor
 group: styling
 order: 5
