--- a/packages/ignition/src/app/locales/docs/usage/components/styling-outline.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-outline.pt-br.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Outline
+description: Estilizando o outline
 slug: styling-outline
 group: styling
 order: 5
