--- a/packages/ignition/src/app/locales/docs/usage/components/styling-ring.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-ring.pt-br.mdx
@@ -1,6 +1,6 @@
 ---
-title: Styling
-description: Styling icons
+title: Ring
+description: Estilizando o ring
 slug: styling-ring
 group: styling
 order: 5
