--- a/packages/ignition/src/app/locales/docs/usage/components/adding-icons-next.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/adding-icons-next.en.mdx
@@ -1,6 +1,6 @@
 ---
-title: Adding
-description: Adding
+title: Adding Icons
+description: Adding Icons
 slug: adding-icons-next
 group: adding-icons
 order: 5
