--- a/packages/ignition/src/app/locales/docs/usage/components/adding-icons-next.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/adding-icons-next.pt-br.mdx
@@ -1,6 +1,6 @@
 ---
-title: Adding
-description: Adding
+title: Adicionando Ícones
+description: Adicione ícones ao seu projeto com facilidade e rapidez.
 slug: adding-icons-next
 group: adding-icons
 order: 5
