--- a/packages/ignition/src/app/locales/docs/usage/components/colors-defaults.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/colors-defaults.en.mdx
@@ -1,10 +1,10 @@
 ---
-title: Colors
+title: Default color palette
 description: Implementing colors for icons in your application
-slug: colors-defaults
+slug: default-color-palette
 group: colors
 order: 5
-activeSelector: group-has-[.docs-colors]:active-content
+activeSelector: group-has-[.docs-default-color-palette]:active-content
 ---
 
 ### Default color palette
