--- a/packages/ignition/src/app/locales/docs/usage/components/colors-defaults.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/colors-defaults.pt-br.mdx
@@ -1,10 +1,10 @@
 ---
-title: Colors
+title: Paleta de cores padrão
 description: Implementing colors for icons in your application
-slug: colors-defaults
+slug: paleta-de-cores-padrao
 group: colors
 order: 5
-activeSelector: group-has-[.docs-colors]:active-content
+activeSelector: group-has-[.docs-paleta-de-cores-padrao]:active-content
 ---
 
 ### Paleta de cores padrão
