--- a/packages/ignition/src/app/locales/docs/usage/components/dark-mode-action.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/dark-mode-action.pt-br.mdx
@@ -1,10 +1,10 @@
 ---
-title: Dark Mode
+title: Uso da variante dark
 description: Implementing dark-mode for icons in your application
-slug: dark-mode-action
+slug: uso-da-variante-dark
 group: dark-mode
 order: 5
-activeSelector: group-has-[.docs-dark-mode]:active-content
+activeSelector: group-has-[.docs-uso-da-variante-dark]:active-content
 ---
 
 ## Em ação
