--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-hw.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-hw.pt-br.mdx
@@ -1,10 +1,10 @@
 ---
 title: Altura e Largura
 description: Implementing sizing for icons in your application
-slug: sizing-tw-hw
+slug: utilizando-altura-e-largura
 group: sizing-icons
 order: 5
-activeSelector: group-has-[.docs-sizing-icons]:active-content
+activeSelector: group-has-[.docs-utilizando-altura-e-largura]:active-content
 ---
 
 ### Utilizando altura and largura
