--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-utilities.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-utilities.en.mdx
@@ -1,10 +1,10 @@
 ---
 title: Basic Sizing
 description: Implementing sizing for icons in your application
-slug: sizing-utilities
+slug: setting-the-icon-size
 group: sizing-icons
 order: 5
-activeSelector: group-has-[.docs-sizing-icons]:active-content
+activeSelector: group-has-[.docs-setting-the-icon-size]:active-content
 ---
 
 ## Basic usage
