--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-utilities.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-utilities.pt-br.mdx
@@ -1,10 +1,10 @@
 ---
 title: Tamanho básico
 description: Implementing sizing for icons in your application
-slug: sizing-utilities
+slug: definindo-o-tamanho-dos-icones
 group: sizing-icons
 order: 5
-activeSelector: group-has-[.docs-sizing-icons]:active-content
+activeSelector: group-has-[.docs-definindo-o-tamanho-dos-icones]:active-content
 ---
 
 # Uso básico
