--- a/packages/ignition/src/app/locales/docs/usage/components/state-management-group-state.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/state-management-group-state.en.mdx
@@ -1,10 +1,10 @@
 ---
-title: Styling
-description: Styling icons
-slug: state-management-group-state
+title: Styling Based on Parent State
+description: Styling Based on Parent State
+slug: styling-based-on-parent-state
 group: state-management
 order: 5
-activeSelector: group-has-[.docs-state-management]:active-content
+activeSelector: group-has-[.docs-styling-based-on-parent-state]:active-content
 ---
 
 #### [Styling Based on Parent State](https://tailwindcss.com/docs/hover-focus-and-other-states#styling-based-on-parent-state)
