--- a/packages/ignition/src/app/locales/docs/usage/components/state-management-order-eo.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/state-management-order-eo.pt-br.mdx
@@ -1,10 +1,10 @@
 ---
-title: Styling
-description: Styling icons
+title: Usando os modificadores `odd` e `even`
+description: Usando os modificadores `odd` e `even`
 slug: state-management-order-eo
 group: state-management
 order: 5
-activeSelector: group-has-[.docs-state-management]:active-content
+activeSelector: group-has-[.docs-state-management-order-eo]:active-content
 ---
 
 Você pode também estilizar um ícone se ele for par ou ímpar usando os modificadores `odd` and `even`:
