--- a/packages/ignition/src/app/locales/docs/usage/components/state-management-order.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/state-management-order.en.mdx
@@ -1,10 +1,10 @@
 ---
-title: Styling
-description: Styling icons
-slug: state-management-order
+title: First, last, odd, and even
+description: First, last, odd, and even
+slug: first-last-odd-and-even
 group: state-management
 order: 5
-activeSelector: group-has-[.docs-state-management]:active-content
+activeSelector: group-has-[.docs-first-last-odd-and-even]:active-content
 ---
 
 #### [First, last, odd, and even](https://tailwindcss.com/docs/hover-focus-and-other-states#first-last-odd-and-even)
