--- a/packages/ignition/src/app/locales/docs/usage/components/state-management-peer-state.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/state-management-peer-state.pt-br.mdx
@@ -1,10 +1,10 @@
 ---
-title: Styling
+title: Usando o Estado dos Elementos Irmãos
 description: Styling icons
-slug: state-management-peer-state
+slug: usando-o-estado-dos-elementos-irmaos
 group: state-management
 order: 5
-activeSelector: group-has-[.docs-state-management]:active-content
+activeSelector: group-has-[.docs-usando-o-estado-dos-elementos-irmaos]:active-content
 ---
 
 #### [Usando o Estado dos Elementos Irmãos](https://tailwindcss.com/docs/hover-focus-and-other-states#styling-based-on-sibling-state)
