--- a/packages/ignition/src/app/locales/docs/usage/components/styling-animate.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-animate.pt-br.mdx
@@ -1,10 +1,10 @@
 ---
 title: Animações
 description: Animações nos ícones
-slug: styling-animate
+slug: animacoes
 group: styling
 order: 5
-activeSelector: group-has-[.docs-styling]:active-content
+activeSelector: group-has-[.docs-animacoes]:active-content
 ---
 
 #### [Animações](https://tailwindcss.com/docs/animation)
