--- a/packages/ignition/src/app/locales/docs/usage/components/styling-border-s.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-border-s.en.mdx
@@ -1,10 +1,10 @@
 ---
 title: Border Style
 description: Styling the border
-slug: styling-border-s
+slug: border-style
 group: styling
 order: 5
-activeSelector: group-has-[.docs-styling]:active-content
+activeSelector: group-has-[.docs-border-style]:active-content
 ---
 
 ## Borders
