--- a/packages/ignition/src/app/locales/docs/usage/sizing-icons.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/sizing-icons.en.mdx
@@ -7,6 +7,6 @@ activeSelector: group-has-[.docs-sizing-icons]:active-content
 ---
 
 ## Usage
-# How to Size Elements
+# How to Size Icons
 
 Utilities for controlling the size of an icon.
