--- a/packages/ignition/src/app/locales/docs/usage/sizing-icons.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/sizing-icons.pt-br.mdx
@@ -7,6 +7,6 @@ activeSelector: group-has-[.docs-dimensionando-icones]:active-content
 ---
 
 ## Usando
-# Como Dimensionar Ícones
+# Dimensionando Ícones
 
 Utilitários para controlar o tamanho dos ícones.
