--- a/packages/ignition/src/app/locales/docs/usage/components/colors-utilities.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/colors-utilities.pt-br.mdx
@@ -1,10 +1,10 @@
 ---
-title: Colors
+title: Definindo a cor dos ícones
 description: Implementing colors for icons in your application
-slug: colors-utilities
+slug: definindo-a-cor-dos-icones
 group: colors
 order: 5
-activeSelector: group-has-[.docs-colors]:active-content
+activeSelector: group-has-[.docs-definindo-a-cor-dos-icones]:active-content
 ---
 
 ## Uso básico
