--- a/packages/ignition/src/app/locales/docs/usage/components/dark-mode-action.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/dark-mode-action.en.mdx
@@ -1,10 +1,10 @@
 ---
-title: Dark Mode
+title: Use dark mode variation
 description: Implementing dark-mode for icons in your application
-slug: dark-mode-action
+slug: use-dark-mode-variation
 group: dark-mode
 order: 5
-activeSelector: group-has-[.docs-dark-mode]:active-content
+activeSelector: group-has-[.docs-use-dark-mode-variation]:active-content
 ---
 
 ## In action
