--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-hw.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-hw.en.mdx
@@ -1,10 +1,10 @@
 ---
 title: Height and Width
 description: Implementing sizing for icons in your application
-slug: sizing-tw-hw
+slug: using-height-and-width
 group: sizing-icons
 order: 5
-activeSelector: group-has-[.docs-sizing-icons]:active-content
+activeSelector: group-has-[.docs-using-height-and-width]:active-content
 ---
 
 ### Using height and width
