--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-sizes.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-sizes.en.mdx
@@ -1,10 +1,10 @@
 ---
 title: Tailwind Sizing Utilities
 description: Implementing sizing for icons in your application
-slug: sizing-tw-sizes
+slug: using-tailwind-utilities
 group: sizing-icons
 order: 5
-activeSelector: group-has-[.docs-sizing-icons]:active-content
+activeSelector: group-has-[.docs-using-tailwind-utilities]:active-content
 ---
 
 ## Using Tailwind utilities
