--- a/packages/ignition/src/app/locales/docs/usage/components/state-management-group-state.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/state-management-group-state.pt-br.mdx
@@ -1,10 +1,10 @@
 ---
-title: Styling
-description: Styling icons
-slug: state-management-group-state
+title: Usando o Estado do Elemento Pai
+description: Usando o Estado do Elemento Pai
+slug: usando-o-estado-do-elemento-pai
 group: state-management
 order: 5
-activeSelector: group-has-[.docs-state-management]:active-content
+activeSelector: group-has-[.docs-usando-o-estado-do-elemento-pai]:active-content
 ---
 
 #### [Usando o Estado do Elemento Pai](https://tailwindcss.com/docs/hover-focus-and-other-states#styling-based-on-parent-state)
