--- a/packages/ignition/src/app/locales/docs/usage/components/state-management-order.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/state-management-order.pt-br.mdx
@@ -1,10 +1,10 @@
 ---
-title: Styling
-description: Styling icons
-slug: state-management-order
+title: Primeiro, Último, Par ou Ímpar
+description: Primeiro, Último, Par ou Ímpar
+slug: primeiro-ultimo-par-ou-impar
 group: state-management
 order: 5
-activeSelector: group-has-[.docs-state-management]:active-content
+activeSelector: group-has-[.docs-primeiro-ultimo-par-ou-impar]:active-content
 ---
 
 #### [Primeiro, Último, Par ou Ímpar](https://tailwindcss.com/docs/hover-focus-and-other-states#first-last-odd-and-even)
