--- a/packages/ignition/src/app/locales/docs/usage/components/styling-animate.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-animate.en.mdx
@@ -1,10 +1,10 @@
 ---
 title: Animations
 description: Using animations with icons
-slug: styling-animate
+slug: animations
 group: styling
 order: 5
-activeSelector: group-has-[.docs-styling]:active-content
+activeSelector: group-has-[.docs-animations]:active-content
 ---
 
 #### [Animations](https://tailwindcss.com/docs/animation)
