--- a/packages/ignition/src/app/locales/docs/usage/components/styling-bg.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-bg.en.mdx
@@ -1,10 +1,10 @@
 ---
-title: Styling
-description: Styling icons
-slug: styling-bg
+title: Defining background
+description: Defining background
+slug: defining-background
 group: styling
 order: 5
-activeSelector: group-has-[.docs-styling]:active-content
+activeSelector: group-has-[.docs-defining-background]:active-content
 ---
 
 ### Defining background
