--- a/packages/ignition/src/app/locales/docs/usage/components/styling-bg.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-bg.pt-br.mdx
@@ -1,10 +1,10 @@
 ---
-title: Styling
-description: Styling icons
-slug: styling-bg
+title: Definindo background
+description: Definindo background
+slug: definindo-background
 group: styling
 order: 5
-activeSelector: group-has-[.docs-styling]:active-content
+activeSelector: group-has-[.docs-definindo-background]:active-content
 ---
 
 ### Definindo background
