--- a/packages/ignition/src/app/locales/docs/usage/components/styling-border-s.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-border-s.pt-br.mdx
@@ -1,10 +1,10 @@
 ---
 title: Estilo da borda
 description: Estilizando a borda
-slug: styling-border-s
+slug: estilo-da-borda
 group: styling
 order: 5
-activeSelector: group-has-[.docs-styling]:active-content
+activeSelector: group-has-[.docs-estilo-da-borda]:active-content
 ---
 
 ## Bordas
