--- a/packages/ignition/src/app/locales/docs/usage/components/colors-defaults.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/colors-defaults.en.mdx
@@ -4,7 +4,7 @@ description: Implementing colors for icons in your application
 slug: default-color-palette
 group: colors
 order: 5
-activeSelector: group-has-[.docs-default-color-palette]:active-content
+activeSelector: group-has-[.docs-colors]:active-content
 ---
 
 ### Default color palette
