--- a/packages/ignition/src/app/locales/docs/usage/components/colors-selector.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/colors-selector.en.mdx
@@ -4,7 +4,7 @@ description: No description
 slug: colors-selector
 group: colors
 order: 6
-activeSelector: group-has-[.docs-colors-selector]:active-content
+activeSelector: group-has-[.docs-colors]:active-content
 ---
 
 ## Colors Selector
