--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-sizes.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-sizes.en.mdx
@@ -4,7 +4,7 @@ description: Implementing sizing for icons in your application
 slug: using-tailwind-utilities
 group: sizing-icons
 order: 5
-activeSelector: group-has-[.docs-using-tailwind-utilities]:active-content
+activeSelector: group-has-[.docs-sizing-icons]:active-content
 ---
 
 ## Using Tailwind utilities
