--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-sizes.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-sizes.pt-br.mdx
@@ -4,7 +4,7 @@ description: Implementing sizing for icons in your application
 slug: usando-utilitarios-do-tailwind
 group: sizing-icons
 order: 5
-activeSelector: group-has-[.docs-usando-utilitarios-do-tailwind]:active-content
+activeSelector: group-has-[.docs-sizing-icons]:active-content
 ---
 
 ## Usando utilitários do Tailwind
