--- a/packages/ignition/src/app/locales/docs/usage/components/state-management-group-state.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/state-management-group-state.pt-br.mdx
@@ -4,7 +4,7 @@ description: Usando o Estado do Elemento Pai
 slug: usando-o-estado-do-elemento-pai
 group: state-management
 order: 5
-activeSelector: group-has-[.docs-usando-o-estado-do-elemento-pai]:active-content
+activeSelector: group-has-[.docs-state-management]:active-content
 ---
 
 #### [Usando o Estado do Elemento Pai](https://tailwindcss.com/docs/hover-focus-and-other-states#styling-based-on-parent-state)
