--- a/packages/ignition/src/app/locales/docs/usage/components/state-management-order.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/state-management-order.en.mdx
@@ -4,7 +4,7 @@ description: First, last, odd, and even
 slug: first-last-odd-and-even
 group: state-management
 order: 5
-activeSelector: group-has-[.docs-first-last-odd-and-even]:active-content
+activeSelector: group-has-[.docs-state-management]:active-content
 ---
 
 #### [First, last, odd, and even](https://tailwindcss.com/docs/hover-focus-and-other-states#first-last-odd-and-even)
