--- a/packages/ignition/src/app/locales/docs/usage/components/styling-border-s.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-border-s.en.mdx
@@ -4,7 +4,7 @@ description: Styling the border
 slug: border-style
 group: styling
 order: 5
-activeSelector: group-has-[.docs-border-style]:active-content
+activeSelector: group-has-[.docs-styling]:active-content
 ---
 
 ## Borders
