--- a/packages/ignition/src/app/locales/docs/usage/components/colors-utilities.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/colors-utilities.en.mdx
@@ -4,7 +4,7 @@ description: Implementing colors for icons in your application
 slug: setting-the-icon-color
 group: colors
 order: 5
-activeSelector: group-has-[.docs-setting-the-icon-color]:active-content
+activeSelector: group-has-[.docs-colors]:active-content
 ---
 
 ## Basic usage
