--- a/packages/ignition/src/app/locales/docs/usage/components/dark-mode-action.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/dark-mode-action.en.mdx
@@ -4,7 +4,7 @@ description: Implementing dark-mode for icons in your application
 slug: use-dark-mode-variation
 group: dark-mode
 order: 5
-activeSelector: group-has-[.docs-use-dark-mode-variation]:active-content
+activeSelector: group-has-[.docs-dark-mode]:active-content
 ---
 
 ## In action
