--- a/packages/ignition/src/app/locales/docs/usage/components/dark-mode-action.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/dark-mode-action.pt-br.mdx
@@ -4,7 +4,7 @@ description: Implementing dark-mode for icons in your application
 slug: uso-da-variante-dark
 group: dark-mode
 order: 5
-activeSelector: group-has-[.docs-uso-da-variante-dark]:active-content
+activeSelector: group-has-[.docs-modo-escuro]:active-content
 ---
 
 ## Em ação
