--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-hw.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-tw-hw.pt-br.mdx
@@ -4,7 +4,7 @@ description: Implementing sizing for icons in your application
 slug: utilizando-altura-e-largura
 group: sizing-icons
 order: 5
-activeSelector: group-has-[.docs-utilizando-altura-e-largura]:active-content
+activeSelector: group-has-[.docs-sizing-icons]:active-content
 ---
 
 ### Utilizando altura and largura
