--- a/packages/ignition/src/app/locales/docs/usage/components/sizing-utilities.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/sizing-utilities.en.mdx
@@ -4,7 +4,7 @@ description: Implementing sizing for icons in your application
 slug: setting-the-icon-size
 group: sizing-icons
 order: 5
-activeSelector: group-has-[.docs-setting-the-icon-size]:active-content
+activeSelector: group-has-[.docs-sizing-icons]:active-content
 ---
 
 ## Basic usage
