--- a/packages/ignition/src/app/locales/docs/usage/components/state-management-peer-state.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/state-management-peer-state.en.mdx
@@ -4,7 +4,7 @@ description: Styling Based on Sibilings State
 slug: styling-based-on-sibilings-state
 group: state-management
 order: 5
-activeSelector: group-has-[.docs-styling-based-on-sibilings-state]:active-content
+activeSelector: group-has-[.docs-state-management]:active-content
 ---
 
 #### [Styling Based on Sibilings State](https://tailwindcss.com/docs/hover-focus-and-other-states#styling-based-on-sibling-state)
