--- a/packages/ignition/src/app/locales/docs/usage/components/styling-bg.en.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-bg.en.mdx
@@ -4,7 +4,7 @@ description: Defining background
 slug: defining-background
 group: styling
 order: 5
-activeSelector: group-has-[.docs-defining-background]:active-content
+activeSelector: group-has-[.docs-styling]:active-content
 ---
 
 ### Defining background
