--- a/packages/ignition/src/app/locales/docs/usage/components/styling-bg.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-bg.pt-br.mdx
@@ -4,7 +4,7 @@ description: Definindo background
 slug: definindo-background
 group: styling
 order: 5
-activeSelector: group-has-[.docs-definindo-background]:active-content
+activeSelector: group-has-[.docs-styling]:active-content
 ---
 
 ### Definindo background
