--- a/packages/ignition/src/app/locales/docs/usage/components/styling-border-s.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-border-s.pt-br.mdx
@@ -4,7 +4,7 @@ description: Estilizando a borda
 slug: estilo-da-borda
 group: styling
 order: 5
-activeSelector: group-has-[.docs-estilo-da-borda]:active-content
+activeSelector: group-has-[.docs-styling]:active-content
 ---
 
 ## Bordas
