fixing more activeSelectors

--- a/packages/ignition/src/app/locales/docs/usage/components/colors-selector.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/colors-selector.pt-br.mdx
@@ -4,7 +4,7 @@ description: No description
 slug: seletor-de-cores
 group: colors
 order: 6
-activeSelector: group-has-[.docs-cores]:active-content
+activeSelector: group-has-[.docs-colors]:active-content
 ---
 
 ## Seletor de cores
