--- a/packages/ignition/src/app/locales/docs/usage/components/styling-animate.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/styling-animate.pt-br.mdx
@@ -4,7 +4,7 @@ description: Animações nos ícones
 slug: animacoes
 group: styling
 order: 5
-activeSelector: group-has-[.docs-estilizando]:active-content
+activeSelector: group-has-[.docs-styling]:active-content
 ---
 
 #### [Animações](https://tailwindcss.com/docs/animation)
