--- a/packages/ignition/src/app/locales/docs/usage/components/colors-defaults.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/colors-defaults.pt-br.mdx
@@ -4,7 +4,7 @@ description: Implementing colors for icons in your application
 slug: paleta-de-cores-padrao
 group: colors
 order: 5
-activeSelector: group-has-[.docs-cores]:active-content
+activeSelector: group-has-[.docs-colors]:active-content
 ---
 
 ### Paleta de cores padrão
