--- a/packages/ignition/src/app/locales/docs/usage/components/colors-utilities.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/usage/components/colors-utilities.pt-br.mdx
@@ -4,7 +4,7 @@ description: Implementing colors for icons in your application
 slug: definindo-a-cor-dos-icones
 group: colors
 order: 5
-activeSelector: group-has-[.docs-cores]:active-content
+activeSelector: group-has-[.docs-colors]:active-content
 ---
 
 ## Uso básico
