--- a/packages/ignition/src/app/locales/components/home/home.pt-br.mdx
+++ b/packages/ignition/src/app/locales/components/home/home.pt-br.mdx
@@ -1,6 +1,6 @@
 ---
 title: Ícones em React e React Native com o poder do Tailwind
-description: A biblioteca de ícones para o seu projeto React ou React Native, personalizada usando as classes do Tailwind que você já conhece
+description: A biblioteca de ícones para o seu projeto React ou React Native, web ou mobile, personalizada usando as classes do Tailwind que você já conhece
 slug: home
 ---
 
