--- a/packages/ignition/src/app/locales/docs/getting-started/components/customization.pt-br.mdx
+++ b/packages/ignition/src/app/locales/docs/getting-started/components/customization.pt-br.mdx
@@ -29,7 +29,7 @@ Você pode definir uma personalização global para todos os ícones de duas man
 #### 1. Redefinindo o tema padrão
 
 - Adicione um elemento components sob a seção theme do seu **_tailwind.config.js_** e um elemento **_icon_**
-  ob o elemento components.
+  abaixo do elemento components.
 
 Assim:
 
