fix(opengraph): custom metadata improvements

--- a/packages/ignition/src/app/locales/en.json
+++ b/packages/ignition/src/app/locales/en.json
@@ -2,7 +2,8 @@
   "brand": {
     "motto": "Icons your way and as you need them. On the Web or Mobile.",
     "description": "The icon library you've been looking for. Works in React and React Native without any changes. Just one code that runs wherever you need it. And with all the power you already know from Tailwind",
-    "total-icon-count-text": "Our current total count of icons is:"
+    "total-icon-count-text": "Our current total count of icons is:",
+    "title-suffix": "A non official Tailwind plugin"
   },
   "opengraph": {
     "collections": "Collections",
